# py2o2

./: .gitignore  Cargo.toml  README.md  ast.json  example.py  inspect_module.py  stub_import.py  test.wit  witgen.py
py2o2/: Cargo.toml
py2o2-testing/: Cargo.toml
py2o2-testing/src/: ast.rs  callable.rs  example.rs  lib.rs  type_aliases.rs  union.rs
py2o2/src/: ast.rs  codegen.rs  importlib.rs  inspect.rs  lib.rs  parser.rs
py2o2/src/parser/: builtin.rs  expr.rs  function_def.rs  stmt.rs
py2o2/src/parser/snapshots/: py2o2__parser__expr__test__expr-10.snap  py2o2__parser__expr__test__expr-11.snap  py2o2__parser__expr__test__expr-12.snap  py2o2__parser__expr__test__expr-13.snap  py2o2__parser__expr__test__expr-14.snap  py2o2__parser__expr__test__expr-2.snap  py2o2__parser__expr__test__expr-4.snap  py2o2__parser__expr__test__expr-5.snap  py2o2__parser__expr__test__expr-6.snap  py2o2__parser__expr__test__expr-7.snap  py2o2__parser__expr__test__expr-8.snap  py2o2__parser__expr__test__expr-9.snap  py2o2__parser__expr__test__expr.snap  py2o2__parser__expr__test__keyword-2.snap  py2o2__parser__expr__test__keyword.snap  py2o2__parser__function_def__test__parse_arg-2.snap  py2o2__parser__function_def__test__parse_arg-3.snap  py2o2__parser__function_def__test__parse_arg-4.snap  py2o2__parser__function_def__test__parse_arg.snap  py2o2__parser__function_def__test__parse_function_def-2.snap  py2o2__parser__function_def__test__parse_function_def-3.snap  py2o2__parser__function_def__test__parse_function_def-4.snap  py2o2__parser__function_def__test__parse_function_def-5.snap  py2o2__parser__function_def__test__parse_function_def-6.snap  py2o2__parser__function_def__test__parse_function_def-7.snap  py2o2__parser__function_def__test__parse_function_def-8.snap  py2o2__parser__function_def__test__parse_function_def-9.snap  py2o2__parser__function_def__test__parse_function_def.snap  py2o2__parser__stmt__test__parse_arg-2.snap  (+12 more)
py2o2/src/snapshots/: py2o2__parser__test__parse_arg-2.snap  py2o2__parser__test__parse_arg-3.snap  py2o2__parser__test__parse_arg-4.snap  py2o2__parser__test__parse_arg.snap  py2o2__parser__test__parse_function_def-2.snap  py2o2__parser__test__parse_function_def.snap  py2o2__parser__test__parse_import-2.snap  py2o2__parser__test__parse_import.snap
py2o2/tests/: callable.rs  example.rs  type_aliases.rs  union.rs
pyroxide/: Cargo.toml
pyroxide-derive/: Cargo.toml
pyroxide-derive/src/: lib.rs
pyroxide/src/: codegen.rs  codegen2.rs  inspect.rs  lib.rs  wit.rs
pyroxide/tests/: codegen.rs  example.py  example.rs  example.wit  type_aliases.rs  wit.rs
src/: lib.rs
(+25 files in other folders)
