[workspace]
members = ["py2o2", "py2o2-testing", "py2o2-runtime", "xtask"]
default-members = ["py2o2", "py2o2-runtime"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
insta = "1.29.0"
nom = "7.1.3"
prettyplease = "0.2.6"
proc-macro2 = "1.0.58"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
quote = "1.0.27"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
syn = { version = "2", features = ["full", "extra-traits"] }
