[package]
name = "py2o2-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

[dependencies.pyo3]
version = "0.18.3"
features = ["auto-initialize"]

[dependencies.py2o2-runtime]
path = "../py2o2-runtime"

[build-dependencies]
anyhow = "1"

[build-dependencies.py2o2]
path = "../py2o2"
