[package]
name = "py2o2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
nom.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
pyo3.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true
