[package]
name = "pyroxide-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies.pyroxide]
path = "../pyroxide"

[dev-dependencies]
insta = "1.29.0"
prettyplease = "0.2.6"

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = { version = "2", features = ["full", "extra-traits"] }
